--- a/public/templates/games.html
+++ b/public/templates/games.html
@@ -4,9 +4,9 @@
     <h2 class="title pull-left">My Games</h2>
     {{debug()}}
   </div>
-
   <ul class="list-inline pull-right">
     <li><a href="#/profile" class="btn btn-default">Profile</a></li>
+    <li><button ng-click="instructions()" class="btn btn-success">Instructions</button></li>
     <li><button ng-click="user.logout()" class="btn btn-warning">Logout</button></li>
   </ul>
 </div>
