--- a/public/templates/phase/3.html
+++ b/public/templates/phase/3.html
@@ -21,7 +21,7 @@
   </div>
 
   <div id="board-controls">
-    <div class="btn-group">
+    <div class="btn-group hidden">
       <button ng-click="zoomIn()" class="btn btn-default"><span class="glyphicon glyphicon-zoom-in"></span></button>
       <button ng-click="zoomOut()" class="btn btn-default"><span class="glyphicon glyphicon-zoom-out"></span></button>
     </div><br/>
