--- a/public/templates/game_play.html
+++ b/public/templates/game_play.html
@@ -21,6 +21,7 @@
             <li class="divider"></li>
             <li><a href="#/games" class="btn btn-primary btn-sm dropdown-menu-button">Game Menu</a></li>
             <li><button ng-click="user.logout()" class="btn btn-warning btn-sm dropdown-menu-button">Log Out</button></li>
+            <li><button ng-click="reportIssue()" class="btn btn-info btn-sm dropdown-menu-button">Report Issue</button></li>
           </ul>
         </div>
       </li>
