--- a/public/templates/phase/2.html
+++ b/public/templates/phase/2.html
@@ -56,6 +56,7 @@
   </div>
   <div class="modal-body">
     <img class="image image-md" ng-src="images/{{card.image}}" alt="{{card.type}}">
+    <p><strong>Points:</strong> {{card.points}}</p>
     <p ng-bind-html="card.description"></p>
   </div>
   <div class="modal-footer">
