--- a/public/templates/phase/4.html
+++ b/public/templates/phase/4.html
@@ -36,16 +36,26 @@
     </accordion-group>
 
     <accordion-group heading="Cards Phase">
-      <dl ng-repeat="action in game.round.actions | filter:{phase_id:2}" class="dl-horizontal">
-        <dt>{{action.title}}</dt>
-        <dd ng-bind-html="action.description"></dd>
+      <dl ng-repeat="action in game.round.actions | filter:{phase:2}" class="dl-horizontal">
+        <dt>
+          <span class="label label-default player-{{action.game_user_id}}">{{action.game_user.user.name}}</span>
+          {{action.title}}
+        </dt>
+        <dd>
+          <span ng-bind-html="action.description"></span>
+        </dd>
       </dl>
     </accordion-group>
 
     <accordion-group heading="Movement Phase">
-      <dl ng-repeat="action in game.round.actions | filter:{phase_id:3}" class="dl-horizontal">
-        <dt>{{action.title}}</dt>
-        <dd ng-bind-html="action.description"></dd>
+      <dl ng-repeat="action in game.round.actions | filter:{phase:3}" class="dl-horizontal">
+        <dt>
+          <span class="label label-default player-{{action.game_user_id}}">{{action.game_user.user.name}}</span>
+          {{action.title}}
+        </dt>
+        <dd>
+          <span ng-bind-html="action.description"></span>
+        </dd>
       </dl>
     </accordion-group>
     <div>
