colour picker and invite user search

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <script src="js/bower_components/lodash/dist/lodash.js"></script>
   <script src="js/bower_components/restangular/src/restangular.js"></script>
   <script src="js/bower_components/ngstorage/ngStorage.js"></script>
+  <script src="js/bootstrap-colorpicker-module.min.js"></script>
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
