--- a/public/templates/game_play.html
+++ b/public/templates/game_play.html
@@ -2,7 +2,7 @@
 <style ng-repeat="game_user in game.game_users">
   .player-{{game_user.id}} {
 
-    background-color: #{{game_user.colour}};
+    background-color: {{game_user.colour}};
   }
 </style>
 
