--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -49,8 +49,8 @@
           <div class="form-group">
             <label for="colour" class="col-sm-2 control-label">Colour</label>
             <div class="col-sm-10">
-              <input type="text" ng-model="$storage.user.colour" class="form-control pull-left" id="colour" style="width:70px;">
-              <div class="colour-sample pull-left" style="background-color:#{{$storage.user.colour}};">
+              <input colorpicker type="text" ng-model="$storage.user.colour" class="form-control pull-left" style="width:70px;">
+              <div class="colour-sample pull-left" style="background-color:{{$storage.user.colour}};">
             </div>
           </div>
         </div>
