--- a/public/templates/game_new.html
+++ b/public/templates/game_new.html
@@ -35,11 +35,33 @@
           <tr ng-repeat="game_user in game.game_users" class="clickable">
             <td>{{game_user.user.name}}</td>
             <td>{{game_user.user.experience}}</td>
-            <td><span class="label label-default" style="background-color: #{{game_user.colour}};">sample</span></td>
+            <td><span class="label label-default" style="background-color: {{game_user.colour}};">sample</span></td>
           </tr>
         </table>
-        <button ng-if="user.isCreator(game)" data-toggle="modal" data-target="#invite-modal" class="btn btn-default">Send Invite</button>
+        <div ng-if="user.isCreator(game)">
+          <script type="text/ng-template" id="inviteTemplate.html">
+            <p>
+              <span class="label" style="background-color: {{match.model.colour}};">{{match.model.name}}</span>
+               - experience: <span class="badge">{{match.model.experience}}</span>
+            </p>
+          </script>
+          <input type="text" ng-model="newUser" placeholder="Search for players to invite"
+                typeahead="name as user.name for user in availableUsers() | filter:{name:$viewValue}"
+                typeahead-template-url="inviteTemplate.html"
+                typeahead-on-select="selectUser($item, $model, $label)" class="form-control">
+          <div ng-if="selectedUser" class="panel panel-default">
+            <div class="panel-body">
+              <span class="label" style="background-color: {{selectedUser.colour}};">{{selectedUser.name}}</span>
+                 ({{selectedUser.email}}) - experience: <span class="badge">{{selectedUser.experience}}</span>
+              <div class="btn-group pull-right">
+                  <button ng-click="inviteUser(selectedUser)" class="btn btn-primary">Invite</button>
+                  <button ng-click="unselectUser()" class="btn btn-default">Cancel</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+
       <div class="col-md-6">
         <div ng-if="game">
           <h4>Card Deck</h4>
@@ -99,7 +121,7 @@
         <ul>
           <li ng-repeat="user in users.$object" ng-if="canInvite(user)">
             <p>
-              <span class="label" style="background-color:#{{user.colour}};">{{user.name}}</span>
+              <span class="label" style="background-color: {{user.colour}};">{{user.name}}</span>
                - experience: <span class="badge">{{user.experience}}</span>
               <button ng-click="inviteUser(user)" class="btn btn-default btn-xs pull-right">Invite</button>
             </p>
