--- a/public/templates/games.html
+++ b/public/templates/games.html
@@ -41,7 +41,7 @@
             <td>{{game_user.game.round.number}}</td>
             <td>{{translatePhase(game_user.game.round.current_phase)}}</td>
             <td>
-                <span class="label" style="background-color: #{{game_user.game.round.game_user.colour}}">
+                <span class="label" style="background-color: {{game_user.game.round.game_user.colour}}">
                   {{game_user.game.round.game_user.user.name}}
                 </span>
             </td>
@@ -66,7 +66,7 @@
                 <h4>Players</h4>
                 <ul class="dl-horizontal">
                   <li ng-repeat="game_user in game.game_users">
-                    <span class="label label-default " style="background-color:#{{game_user.colour}};">
+                    <span class="label label-default " style="background-color:{{game_user.colour}};">
                       {{game_user.user.name}}
                     </span>
                      - Score <span class="badge">{{game_user.score}}</span>
