--- a/public/templates/phase/3.html
+++ b/public/templates/phase/3.html
@@ -2,7 +2,7 @@
   <img id="game-board" draggable="true" src="images/cow-body.png"
       style="width: {{width}}px; left: {{left}}px; top: {{top}}px">
 
-  <div ng-repeat="ration in allRations" class="ration ration-board clickable {{ration.selected || ration.id == move.ration.id ? 'selected' : ''}}"
+  <div ng-repeat="ration in game.allRations" class="ration ration-board clickable {{ration.selected || ration.id == move.ration.id ? 'selected' : ''}}"
         style="left: {{left+ration.position.centre_x-10}}px; top: {{top+ration.position.centre_y-10}}px;
         border-color:#{{ration.game_user.colour}}">
     <div ng-repeat="ingredient in ration.ingredients" class="ration-ingredient {{ingredient.ingredient_cat.name}}"></div>
@@ -11,16 +11,10 @@
   <img ng-repeat="motile in game.motiles" ng-src="images/motile.png" class="motile clickable"
         style="left: {{left+motile.position.centre_x-10}}px; top: {{top+motile.position.centre_y-10}}px;" />
 
-  <script type="text/ng-template"  id="position_renderer.html">
-    <div ng-repeat="pos in graph.traverse(pos.id)" ng-include="'position_renderer.html'"
-        class="move-position {{pos.links <= 0 || !pos.links ? 'move-position-final' : ''}}"
-        style="left: {{left+pos.centre_x}}px; top: {{top+pos.centre_y}}px">
-    </div>
-  </script>
   <div ng-repeat="pos in graph.traverse(position.id)" ng-if="pos.depth > 0"
-        class="move-position {{pos.depth == 1 ? 'move-position-first' : ''}} clickable"
+        class="move-position {{pos.depth == 1 ? 'move-position-first clickable' : ''}}"
         style="left: {{left+pos.centre_x}}px; top: {{top+pos.centre_y}}px; padding-left:3px;"
-        ng-click="moveRation(pos.id)">{{pos.depth}}
+        ng-click="pos.depth == 1 ? moveRation(pos.id) : null">{{pos.depth}}
   </div>
 
   <div id="board-controls">
